Fix anchor symbol overlapping with heading
At the first start of a heading the heading would not be clickable
because of some padding from the heading anchor icon that shows upon
hover.

--- a/frontend/styles/base.scss
+++ b/frontend/styles/base.scss
@@ -134,7 +134,7 @@ h4 {
     position: absolute;
     bottom: 5px;
     left: -25px;
-    padding-right: 25px;
+    padding-right: 10px;
 
     color: var(--highlight-color);
     font-size: 0.7em;
